<resources>
    <string name="app_name">Dairy Manager</string>
    <!-- Added by Michael strings related to login-->
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="password_hint">Enter password</string>
    <string name="reset">Reset</string>

    <!-- Data collection activity -->
    <string name="radio_morning">Morning</string>
    <string name="radio_afternoon">Afternoon</string>
    <string name="btn_collection_save">Save</string>

    <!--Search activity -->
    <string name="select_date">Date and search</string>
    <string name="searh_hint">Cow tag or name</string>

    <!--Cow Management -->
    <string name="tag_id">Cow tag</string>
    <string name="cow_name">Cow name if any</string>
    <string name="is_milked">Is milked?</string>
    <string name="add_cow">Add cow</string>
    <string name="title_activity_dairy_cow_management">DairyCowManagementActivity</string>

    <!--Main Menu -->
    <string name="search">search</string>
    <string name="help">help</string>
    <string name="log_out">Log out</string>
    <string name="cow_management">Dairy Cow Management</string>
</resources>
