<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
        <TableRow>
            <EditText
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/enter_username"
                    android:textColorHint="@color/colorAccent"
                    android:ems="10"
                    android:id="@+id/usernameEditText"
                    android:layout_margin="20dp"/>
        </TableRow>
        <TableRow>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordEditText"
                    android:layout_margin="20dp"
                    android:hint="@string/password_hint"
                    android:layout_marginBottom="20dp"/>

            <Button
                    android:id="@+id/showHideBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/show"/>
        </TableRow>

    </TableLayout>

</android.widget.LinearLayout>