<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_cows"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:layout_marginTop="67dp"/>

    <RadioGroup
            android:layout_width="wrap_content" android:id="@+id/periodCollection"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="151dp" android:layout_alignParentTop="true" android:layout_marginTop="154dp">
        <RadioButton
                android:id="@+id/radio_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_morning"
                android:checked="true" />

        <RadioButton
                android:id="@+id/radio_afternoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_afternoon"/>
    </RadioGroup>
    <Button
            android:text="@string/btn_collection_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:id="@+id/data_save"
            android:layout_alignStart="@+id/spinner_cows" android:layout_marginBottom="86dp" android:onClick="save"
            android:layout_marginStart="-6dp"/>
    <EditText
            android:layout_width="80dp"
            android:maxLength="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:id="@+id/collected_amount"
            android:layout_marginBottom="201dp" android:singleLine="true"/>
</RelativeLayout>
